--- a/home.html
+++ b/home.html
@@ -51,41 +51,41 @@
         <h2>SHOP NOW</h2>
     </section>
     <section class="featured">
-        <h2>LATEST PRODUCT</h2>
+        <h2> TOP SALES</h2>
         <div class="product-container">
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="brinjal.jpg" alt="Product 1">
                 <p>brinjal</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="carrot.jpg" alt="Product 2">
                 <p>carrot</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="cauliflower.jpg" alt="Product 3">
                 <p>cauliflower</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="lady's finger.jpg" alt="Product 4">
                 <p>lady finger</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="lemon.jpg" alt="Product 5">
                 <p>lemon</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="onion.jpg" alt="Product 6">
                 <p>onion</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="pumkin.jpg" alt="Product 7">
                 <p>pumkin</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="tomato .jpg" alt="Product 8">
                 <p>tomato</p>
             </div>
-            <div class="product">
+            <div class="product" data-farmer-url="farmer-details.html">
                 <img src="garlic.jpg" alt="Product 9">
                 <p>Garlic</p>
             </div>
