CHANGE COLOR OF HERO

--- a/sign up.html
+++ b/sign up.html
@@ -19,6 +19,8 @@
             <label for="phoneNumber">Phone Number:</label>
             <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="xxx xxx xxxx" required>
             <br>
+            <label for="District">District:</label>
+            <input type="text" name="District" id="District" placeholder="Enter your district" required>
             <label for="passwordSignUp">Password:</label>
             <input type="password" name="passwordSignUp" id="passwordSignUp" placeholder="Password" required>
             <br>
