--- a/frontpage.html
+++ b/frontpage.html
@@ -11,8 +11,8 @@
         <div class="logoname">Xavier's Market</div>
         <nav class="frontpagenavigate">
             <ul>
-                <li><a href="login.html">Home</a></li>
-                <li><a href="login.html">Shop</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html">Shop</a></li>
                 <li><a href="#ABOUTUS">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
