--- a/login.html
+++ b/login.html
@@ -7,6 +7,12 @@
     <title>Xavier's Market</title>
 </head>
 <body>
+
+    <!-- Back Button -->
+    <button class="back-button" onclick="goBack()">
+        <img src="turn-back.png" alt="Back">
+    </button>
+
     <div class="login">
         <h1>Welcome Back 🤗</h1>
         <form onsubmit="return validateLogin(event)">
@@ -24,6 +30,7 @@
             </p>
         </form>
     </div>
+
     <script src="login.js"></script>
 </body>
 </html>
