--- a/sign up.html
+++ b/sign up.html
@@ -7,6 +7,9 @@
     <title>Xavier's Market</title>
 </head>
 <body>
+    <button class="back-button" onclick="goBack()">
+        <img src="turn-back.png" alt="Back">
+    </button>
     <div class="signup">
         <h1>Welcome to Xavier's store !</h1>
         <form onsubmit="return validateSignup(event)">
