--- a/home.html
+++ b/home.html
@@ -76,11 +76,11 @@
         <h2>SHOP NOW</h2>
     <section class="button-container">
         <button class="product-button" onclick="navigateToProduct('vegetables')">
-            <img src="vegetables.jpg" alt="Vegetables">
+            <img src="vegetable.jpg" alt="Vegetables">
             <span>VEGETABLES</span>
         </button>
         <button class="product-button" onclick="navigateToProduct('fruits')">
-            <img src="fruits.jpg" alt="Fruits">
+            <img src="fruit.jpg" alt="Fruits">
             <span>FRUITS</span>
         </button>
         <button class="product-button" onclick="navigateToProduct('pulses')">
