--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
         <h2>Shopping Cart</h2>
         <div id="cart-items">
             <div class="cart-item" data-price="10" onclick="goToProductPage('apple.html')">
-                <img src="tomato .jpg" alt="Apple">
+                <img src="tomato .jpg" alt="Tomato">
                 <div class="cart-item-details">
                     <div class="cart-item-name">tomato</div>
                     <div class="cart-item-date">Added on: 2025-02-21</div>
