--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
     <section class="hero">
         <h1>Welcome to Xavier's Market</h1>
         <p>Shop the latest trends at unbeatable prices</p>
-        <a href="#" class="shop-btn">Shop Now</a>
+        <a href="#SHOP" class="shop-btn">Shop Now</a>
     </section>
     <div class="slideshow-container">
         <div class="slides">
