--- a/html/sign up.html
+++ b/html/sign up.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Xavier's Market</title>
 </head>
 <body>
     <button class="back-button" onclick="goBack()">
-        <img src="turn-back.png" alt="Back">
+        <img src="/image/turn-back.png" alt="Back">
     </button>
     <div class="signup">
         <h1>Welcome to Xavier's store !</h1>
@@ -39,6 +39,6 @@
         <p id="error-message" style="color: red; display: none;">Please fill in all fields</p>
     </div>
 
-    <script src="signup.js"></script>
+    <script src="/js/signup.js"></script>
 </body>
 </html>
