--- a/html/buy-detail.html
+++ b/html/buy-detail.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order Placement - E-Shopping</title>
-    <link rel="stylesheet" href="buy-detail.css">
+    <link rel="stylesheet" href="/css/buy-detail.css">
 </head>
 <body>
-    <div class="product-section">
-        <h2>Our Products</h2>
-        <ul>
-            <li>Laptop - ₹100,000</li>
-            <li>Mobile Phone - ₹50,000</li>
-            <li>Headphones - ₹10,000</li>
-        </ul>
-    </div>
     <div class="container">
         <h2>Place Your Order</h2>
         <form id="orderForm">
@@ -36,7 +28,7 @@
         <p id="confirmation"></p>
     </div>
 
-    <script src="buy-detail.js">
+    <script src="/js/buy-detail.js">
        
     </script>
 </body>
