--- a/html/cart.html
+++ b/html/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="/css/cart.css">
     <title>Xavier’s Market</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h2>Shopping Cart</h2>
         <div id="cart-items">
             <div class="cart-item" data-price="10" onclick="goToProductPage('apple.html')">
-                <img src="tomato .jpg" alt="Tomato">
+                <img src="/image/tomato .jpg" alt="Tomato">
                 <div class="cart-item-details">
                     <div class="cart-item-name">tomato</div>
                     <div class="cart-item-date">Added on: 2025-02-21</div>
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="cart-item" data-price="15" onclick="goToProductPage('banana.html')">
-                <img src="banana.jpg" alt="Banana">
+                <img src="/image/banana.jpg" alt="Banana">
                 <div class="cart-item-details">
                     <div class="cart-item-name">Banana</div>
                     <div class="cart-item-date">Added on: 2025-02-21</div>
@@ -35,10 +35,10 @@
             </div>
         </div>
         <div class="buy-all">
-            <span>Total: $<span id="total-price">25</span></span>
+            <span>Total: rupees<span id="total-price">25</span></span>
             <button onclick="buyAll()">Buy All</button>
         </div>
     </div>
-    <script src="cart.js"></script>
+    <script src="/js/cart.js"></script>
 </body>
 </html>
