--- a/html/login.html
+++ b/html/login.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Xavier's Market</title>
 </head>
 <body>
 
     <!-- Back Button -->
     <button class="back-button" onclick="goBack()">
-        <img src="turn-back.png" alt="Back">
+        <img src="/image/turn-back.png" alt="Back">
     </button>
 
     <div class="login">
         <h1>Welcome Back 🤗</h1>
-        <form onsubmit="return validateLogin(event)">
-            <label for="loginUsername">Username:</label>
-            <input type="text" name="loginUsername" id="loginUsername" placeholder="Username" required>
+        <form id="login-form">
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username" placeholder="Username" required>
             <br>
-            <label for="loginPassword">Password:</label>
-            <input type="password" name="loginPassword" id="loginPassword" placeholder="Password" required>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" placeholder="Password" required>
             <br>
             <button type="submit">Log in</button>
             <p id="error-message" style="color: #F28500; display: none;">Invalid username or password</p>
             <h4>or</h4>
             <p>
-                Create a new account? <a href="sign up.html">Sign up</a>
+                Create a new account? <a href="sign-up.html">Sign up</a>
             </p>
         </form>
     </div>
 
-    <script src="login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
