--- a/source/html/frontpage.html
+++ b/source/html/frontpage.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xavier's Market </title>
-    <link rel="stylesheet" href="/css/frontpage.css">
+    <link rel="stylesheet" href="/source/css/frontpage.css">
 </head>
 <body>
     <header>
         <div class="logoname">Xavier's Market</div>
         <nav class="frontpagenavigate">
             <ul>
-                <li><a href="/html/home.html">Home</a></li>
-                <li><a href="/html/home.html">Shop</a></li>
+                <li><a href="/source/html/home.html">Home</a></li>
+                <li><a href="/source/html/home.html">Shop</a></li>
                 <li><a href="#ABOUTUS">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <script src="/js/home.js"></script>
+    <script src="/source/js/home.js"></script>
 
     <!-- Hero Section -->
     <section class="pop">
