--- a/source/html/profile.html
+++ b/source/html/profile.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xavier's Market</title>
-    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/source/css/profile.css">
 </head>
 <body>
     <div class="profile-container">
         <label for="profile-img-input">
-            <img src="/image/profile-icon.jpg" alt="Profile Picture" id="profile-img" class="profile-img">
+            <img src="/source/image/profile-icon.jpg" alt="Profile Picture" id="profile-img" class="profile-img">
         </label>
         <input type="file" id="profile-img-input" accept="image/*" style="display: none;">
 
@@ -23,6 +23,6 @@
         <button id="edit-profile" class="edit-btn">Edit Profile</button>
     </div>
 
-    <script src="/js/profile.js"></script>
+    <script src="/source/js/profile.js"></script>
 </body>
 </html>
