--- a/source/html/consumerhome.html
+++ b/source/html/consumerhome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xavier's Market </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/source/css/home.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
     <!-- Left Sidebar Menu -->
     <div class="side-menu" id="sideMenu">
         <span class="close-menu" onclick="closeMenu()">✖</span>
-        <a href="/html/agro AI.html">🌿 Agro-AI</a>
-        <a href="/html/chat.html">💬 Real-time Chat</a>
-        <a href="/html/farmers.html">🚜 Nearby Farmers Listing</a>
+        <a href="/source/html/agro AI.html">🌿 Agro-AI</a>
+        <a href="/source/html/chat.html">💬 Real-time Chat</a>
+        <a href="/source/html/farmers.html">🚜 Nearby Farmers Listing</a>
     </div>
 
     <!-- Background overlay -->
@@ -29,14 +29,13 @@
 
                     <input type="text" id="search-input" placeholder="Search...">
                     <button onclick="search()">Search</button>
-                    <li><a href="/html/home.html">Home</a></li>
+                    <li><a href="/source/html/home.html">Home</a></li>
                     <li><a href="#SHOP">Shop</a></li>
-                    <li><a href="/html/frontpage.html">About US</a></li>
+                    <li><a href="/source/html/frontpage.html">About US</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="/html/product.html">Products</a></li>
-                    <li><a href="/html/cart.html">Cart</a></li>
-                    <li><a href="/html/profile.html" class="profile-icon"><img  src="/image/profile-icon.jpg" alt="Profile"></a></li>
-                    <li><a href="/html/login.html" class="btn.login">Login/Sign Up</a></li>
+                    <li><a href="/source/html/cart.html">Cart</a></li>
+                    <li><a href="/source/html/profile.html" class="profile-icon"><img  src="/source/image/profile-icon.jpg" alt="Profile"></a></li>
+                    <li><a href="/source/html/login.html" class="btn.login">Login/Sign Up</a></li>
                     <li><a onclick="logoutUser()" class="btn.logout" style="display: none;">Logout</a></li>
 
                 </ul>
@@ -44,7 +43,7 @@
         </div>
     </header>
 
-    <script src="/js/home.js"></script>
+    <script src="/source/js/home.js"></script>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -54,9 +53,9 @@
     </section>
     <div class="slideshow-container">
         <div class="slides">
-            <div class="slide"><img src="/image/ghee.jpg" alt="Slide 1"></div>
-            <div class="slide"><img src="/image/demo.jpg" alt="Slide 2"></div>
-            <div class="slide"><img src="/image/demo2.jpg" alt="Slide 3"></div>
+            <div class="slide"><img src="/source/image/ghee.jpg" alt="Slide 1"></div>
+            <div class="slide"><img src="/source/image/demo.jpg" alt="Slide 2"></div>
+            <div class="slide"><img src="/source/image/demo2.jpg" alt="Slide 3"></div>
             <!-- <div class="slide"><img src="https://via.placeholder.com/800x300?text=Slide+4" alt="Slide 4"></div> -->
         </div>
         
@@ -68,24 +67,24 @@
         <span class="dot" onclick="goToSlide(2)"></span>
         
     </div>
-    <script src="/js/home.js"></script>
+    <script src="/source/js/home.js"></script>
     <section class="SHOP" id="SHOP">
         <h2>SHOP NOW</h2>
     <section class="button-container">
         <button class="product-button" onclick="navigateToProduct('vegetables')">
-            <img src="/image/vegetable.jpg" alt="Vegetables">
+            <img src="/source/image/vegetable.jpg" alt="Vegetables">
             <span>VEGETABLES</span>
         </button>
         <button class="product-button" onclick="navigateToProduct('fruits')">
-            <img src="/image/fruit.jpg" alt="Fruits">
+            <img src="/source/image/fruit.jpg" alt="Fruits">
             <span>FRUITS</span>
         </button>
         <button class="product-button" onclick="navigateToProduct('pulses')">
-            <img src="/image/pulses.jpg" alt="Pulses">
+            <img src="/source/image/pulses.jpg" alt="Pulses">
             <span>PULSES</span>
         </button>
         <button class="product-button" onclick="navigateToProduct('dairy')">
-            <img src="/image/dairy.jpg" alt="Dairy">
+            <img src="/source/image/dairy.jpg" alt="Dairy">
             <span>DAIRY PRODUCT</span>
         </button>
     </section>
@@ -95,39 +94,39 @@
         <h2> TOP SALES</h2>
         <div class="product-container">
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/brinjal.jpg" alt="Product 1">
+                <img src="/source/image/brinjal.jpg" alt="Product 1">
                 <p>brinjal</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/carrot.jpg" alt="Product 2">
+                <img src="/source/image/carrot.jpg" alt="Product 2">
                 <p>carrot</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/cauliflower.jpg" alt="Product 3">
+                <img src="/source/image/cauliflower.jpg" alt="Product 3">
                 <p>cauliflower</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/lady's finger.jpg" alt="Product 4">
+                <img src="/source/image/lady's finger.jpg" alt="Product 4">
                 <p>lady finger</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/lemon.jpg" alt="Product 5">
+                <img src="/source/image/lemon.jpg" alt="Product 5">
                 <p>lemon</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/onion.jpg" alt="Product 6">
+                <img src="/source/image/onion.jpg" alt="Product 6">
                 <p>onion</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/pumkin.jpg" alt="Product 7">
+                <img src="/source/image/pumkin.jpg" alt="Product 7">
                 <p>pumkin</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/tomato .jpg" alt="Product 8">
+                <img src="/source/image/tomato .jpg" alt="Product 8">
                 <p>tomato</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/garlic.jpg" alt="Product 9">
+                <img src="/source/image/garlic.jpg" alt="Product 9">
                 <p>Garlic</p>
             </div>
         </div>
