--- a/source/html/login.html
+++ b/source/html/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/source/css/login.css">
     <title>Xavier's Market</title>
 </head>
 <body>
 
     <!-- Back Button -->
     <button class="back-button" onclick="goBack()">
-        <img src="/image/turn-back.png" alt="Back">
+        <img src="/source/image/turn-back.png" alt="Back">
     </button>
 
     <div class="login">
@@ -31,6 +31,6 @@
         </form>
     </div>
 
-    <script src="/js/login.js"></script>
+    <script src="/source/js/login.js"></script>
 </body>
 </html>
