--- a/source/html/product-list.html
+++ b/source/html/product-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xavier's Market </title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/source/css/home.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
     <!-- Left Sidebar Menu -->
     <div class="side-menu" id="sideMenu">
         <span class="close-menu" onclick="closeMenu()">✖</span>
-        <a href="/html/agro AI.html">🌿 Agro-AI</a>
-        <a href="/html/chat.html">💬 Real-time Chat</a>
-        <a href="/html/farmers.html">🚜 Nearby Farmers Listing</a>
+        <a href="/source/html/agro AI.html">🌿 Agro-AI</a>
+        <a href="/source/html/chat.html">💬 Real-time Chat</a>
+        <a href="/source/html/farmers.html">🚜 Nearby Farmers Listing</a>
     </div>
 
     <!-- Background overlay -->
@@ -29,14 +29,14 @@
 
                     <input type="text" id="search-input" placeholder="Search...">
                     <button onclick="search()">Search</button>
-                    <li><a href="/html/home.html">Home</a></li>
+                    <li><a href="/source/html/home.html">Home</a></li>
                     <li><a href="#SHOP">Shop</a></li>
-                    <li><a href="/html/frontpage.html">About US</a></li>
+                    <li><a href="/source/html/frontpage.html">About US</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="/html/product.html">Products</a></li>
-                    <li><a href="/html/cart.html">Cart</a></li>
-                    <li><a href="/html/profile.html" class="profile-icon"><img src="profile-icon.jpg" alt="Profile"></a></li>
-                    <li><a href="/html/login.html" class="btn login">Login/Sign Up</a></li>
+                    <li><a href="/source/html/product.html">Products</a></li>
+                    <li><a href="/source/html/cart.html">Cart</a></li>
+                    <li><a href="/source/html/profile.html" class="profile-icon"><img src="profile-icon.jpg" alt="Profile"></a></li>
+                    <li><a href="/source/html/login.html" class="btn login">Login/Sign Up</a></li>
                     <li><a onclick="logoutUser()" class="btn logout" style="display: none;">Logout</a></li>
 
                 </ul>
@@ -44,7 +44,7 @@
         </div>
     </header>
 
-    <script src="/js/home.js"></script>
+    <script src="/source/js/home.js"></script>
 
     <!-- Hero Section -->
            
@@ -53,39 +53,39 @@
         <h2> PRODUCTS</h2>
         <div class="product-container">
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/brinjal.jpg" alt="Product 1">
+                <img src="/source/image/brinjal.jpg" alt="Product 1">
                 <p>brinjal</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/carrot.jpg" alt="Product 2">
+                <img src="/source/image/carrot.jpg" alt="Product 2">
                 <p>carrot</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/cauliflower.jpg" alt="Product 3">
+                <img src="/source/image/cauliflower.jpg" alt="Product 3">
                 <p>cauliflower</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/lady's finger.jpg" alt="Product 4">
+                <img src="/source/image/lady's finger.jpg" alt="Product 4">
                 <p>lady finger</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/lemon.jpg" alt="Product 5">
+                <img src="/source/image/lemon.jpg" alt="Product 5">
                 <p>lemon</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/onion.jpg" alt="Product 6">
+                <img src="/source/image/onion.jpg" alt="Product 6">
                 <p>onion</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/pumkin.jpg" alt="Product 7">
+                <img src="/source/image/pumkin.jpg" alt="Product 7">
                 <p>pumkin</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/tomato .jpg" alt="Product 8">
+                <img src="/source/image/tomato .jpg" alt="Product 8">
                 <p>tomato</p>
             </div>
             <div class="product" data-farmer-url="farmer-details.html">
-                <img src="/image/garlic.jpg" alt="Product 9">
+                <img src="/source/image/garlic.jpg" alt="Product 9">
                 <p>Garlic</p>
             </div>
         </div>
